argocd/workloads/paperless-ngx/paperless-ngx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  selector:
    matchLabels:
      app: paperless-ngx
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.14.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-ngx-data
              readOnly: False
            - mountPath: /usr/src/paperless/media
              name: paperless-ngx-media
              readOnly: False
            - mountPath: /usr/src/paperless/export
              name: paperless-ngx-export
              readOnly: False
            - mountPath: /usr/src/paperless/consume
              name: paperless-ngx-consume
              readOnly: False
          resources: {}
      restartPolicy: Always
      volumes:
        - name: paperless-ngx-data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: paperless-ngx-media
          persistentVolumeClaim:
            claimName: paperless-ngx-media
        - name: paperless-ngx-export
          persistentVolumeClaim:
            claimName: paperless-ngx-export
        - name: paperless-ngx-consume
          persistentVolumeClaim:
            claimName: paperless-ngx-consume
