argocd/workloads/paperless-ngx/gotenberg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  gotenberg
spec:
  selector:
    app:  gotenberg
  type: ClusterIP
  ports:
    - name: gotenberg
      port: 3000
      protocol: TCP
      targetPort: 3000
