argocd/workloads/paperless-ngx/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  redis
spec:
  selector:
    app:  redis
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
