argocd/workloads/paperless-ngx/tika-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  tika
spec:
  selector:
    app:  tika
  type: ClusterIP
  ports:
    - name: tika
      port: 9998
      protocol: TCP
      targetPort: 9998
