argocd/workloads/paperless-ngx/paperless-ngx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
spec:
  ingressClassName: nginx
  rules:
  - host: paperless.legion.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-ngx
            port:
              number: 8000
